fixed an issue with overflow-x in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 
+
 a {
   font-weight: 500;
   color: #036048;
@@ -18,6 +19,7 @@ body {
   font-family: "Quicksand", sans-serif;
   line-height: 1.5;
   font-weight: 500;
+  overflow-x: hidden;
 }
 
 h1 {
